Closed Bug 1358979 Opened 8 years ago Closed 8 years ago

nsDocumentEncoder with RequiresReinitAfterOutput should reset some strong pointers

Categories

(Core :: DOM: Core & HTML, defect)

55 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox55 --- fixed

People

(Reporter: m_kato, Assigned: m_kato)

References

Details

Attachments

(2 files)

Follow up bug 1352882. nsDocumentEncoder with RequiresReinitAfterOutput should reset some strong pointers.
I think that it should release *all* strong pointers instead of some of them which causes leaking memory *now* since it can be regressed if somebody changes the implementation which is referred by nsDocumentEncoder strongly unless we can detect such regression with automated tests.
If releasing mSerializer, it causes performance issue again. mSerializer isn't CC class, I will add it to NS_IMPL_CYCLE_COLLECTION
(When I profile code before landing bug 1452882, memory allocation for content serializer spends a lot of time)
FWIW, currently I think this is not the cause for those leaks. https://bugzilla.mozilla.org/show_bug.cgi?id=1357872#c17
Comment on attachment 8860889 [details] Bug 1358979 - nsDocumentEncoder with RequiresReinitAfterOutput should reset some strong pointers. https://reviewboard.mozilla.org/r/132892/#review135678
Attachment #8860889 - Flags: review?(bugs) → review+
Comment on attachment 8860890 [details] Bug 1358979 - nsPlainTextSerializer should be cycle collection. https://reviewboard.mozilla.org/r/132894/#review135682
Attachment #8860890 - Flags: review?(bugs) → review+
Unfortunately this doesn't seem to help with Bug 1357872. No idea yet what caused that bug.
Pushed by m_kato@ga2.so-net.ne.jp: https://hg.mozilla.org/integration/autoland/rev/83f12eb017b6 nsDocumentEncoder with RequiresReinitAfterOutput should reset some strong pointers. r=smaug https://hg.mozilla.org/integration/autoland/rev/a01a94c69531 nsPlainTextSerializer should be cycle collection. r=smaug
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: