Bug 1358979 - nsDocumentEncoder with RequiresReinitAfterOutput should reset some strong pointers. r=smaug

We should release strong pointers into nsDocumentEncoder with RequiresReinitAfterOutput option to avoid holding dom node.

Also, mStream and mUnicodeEncoder will release into EncodeToStream, so it is unnecessary to clear it.

MozReview-Commit-ID: Ll8jFmMj4Ps